<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccueilActivity">

    <Button
        android:id="@+id/btDeco"
        android:layout_width="202dp"
        android:layout_height="58dp"
        android:layout_marginStart="104dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="176dp"
        android:text="@string/btDeco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btWifi"
        android:layout_width="202dp"
        android:layout_height="58dp"
        android:layout_marginStart="112dp"
        android:layout_marginEnd="112dp"
        android:text="@string/btWifi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="336dp" />

    <Button
        android:id="@+id/btSalle"
        android:layout_width="202dp"
        android:layout_height="58dp"
        android:layout_marginStart="112dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="100dp"
        android:text="@string/btSalle"
        app:layout_constraintBottom_toTopOf="@+id/btWifi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>