<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="416dp"
            android:layout_height="327dp"
            android:gravity="bottom|end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvlogin"
                android:layout_width="match_parent"
                android:layout_height="19dp"
                android:layout_marginStart="46dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="307dp"
                android:text="@string/tvloginlabel"
                tools:text="@string/tvloginlabel" />

            <EditText
                android:id="@+id/ztLogin"
                android:layout_width="312dp"
                android:layout_height="48dp"
                android:layout_marginStart="44dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="55dp"
                android:ems="10"
                android:hint="@string/tvloginlabel"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="420dp"
            android:layout_height="168dp"
            android:gravity="center|end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvmdp"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginStart="46dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="307dp"
                android:text="@string/tvmdp"
                tools:text="@string/tvmdp" />

            <EditText
                android:id="@+id/ztPassword"
                android:layout_width="312dp"
                android:layout_height="48dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="54dp"
                android:ems="10"
                android:hint="@string/tvmdp"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="411dp"
            android:layout_height="464dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="131dp"
                android:layout_marginEnd="132dp"
                android:layout_marginBottom="199dp"
                android:text="@string/btConnect"
                tools:text="@string/btConnect" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>